fixed dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -46,8 +46,7 @@ body {
 }
 
 main {
-    padding: 12px 16px 0;
-    width: 100%;
+    width: 10%;
     box-sizing: border-box;
     overflow-x: hidden;
 }
@@ -59,7 +58,7 @@ main {
     width: 100%;
     max-width: 308px;
     margin: 0 auto;
-    padding-bottom: 0;
+    padding-bottom: -100px;
 }
 
 .header {
